crates/toml/tests/snapshots/invalid/array/extending-table.stderr
TOML parse error at line 5, column 2
  |
5 | [a.c]
  |  ^
cannot extend value of type array with a dotted key

---
TOML parse error at line 5, column 2
  |
5 | [a.c]
  |  ^
cannot extend value of type array with a dotted key
